force-app/main/default/objects/Commission_Upload_Field_Mapping__mdt/Commission_Upload_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Commission Upload Field Mapping</label>
    <pluralLabel>Commission Upload Field Mappings</pluralLabel>
</CustomObject>