force-app/main/default/objects/Commission_Upload_Field_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <inlineHelpText>The API name of the field in Commission_Staging__c object</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>