force-app/main/default/objects/Commission_Upload_Field_Mapping__mdt/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <inlineHelpText>the Commission_Upload__c RT name</inlineHelpText>
    <label>Format</label>
    <referenceTo>Commission_Upload_Format__mdt</referenceTo>
    <relationshipLabel>Commission Upload Field Mappings</relationshipLabel>
    <relationshipName>Commission_Upload_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>