force-app/main/default/objects/Commission_Upload_Field_Mapping__mdt/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <label>Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>