force-app/main/default/objects/Commission_Upload_Field_Mapping__mdt/fields/Is_Input_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_Input_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Input Value</label>
    <type>Checkbox</type>
</CustomField>