force-app/main/default/objects/Commission_Upload_Field_Mapping__mdt/listViews/AIG_Format.listView-meta.xml
<ListView>
    <fullName>AIG_Format</fullName>
    <columns>Format__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Default_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Format__c</field>
        <operation>equals</operation>
        <value>AIG</value>
    </filters>
    <label>AIG Format</label>
    <language>en_US</language>
</ListView>